--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
 spring.application.name=AddressBookApp
+spring.datasource.url=jdbc:mysql://localhost:3306/address_book
+spring.datasource.username=root
+spring.datasource.password=Chintu@12
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
